Fix misalignment between icons and title

--- a/vizro-core/src/vizro/static/css/layout.css
+++ b/vizro-core/src/vizro/static/css/layout.css
@@ -45,8 +45,7 @@
   flex-direction: row;
   width: 100%;
   background-color: var(--surfaces-bg-02);
-  padding-left: 20px;
-  padding-right: 32px;
+  padding: 0 32px;
   min-height: 64px;
   justify-content: space-between;
   align-items: center;
@@ -125,13 +124,12 @@
   align-items: center;
   display: inline-flex;
   flex-direction: column;
-  width: 64px;
 }
 
 .icon-button {
   align-items: center;
   display: flex;
-  height: 64px;
+  height: 80px;
   justify-content: center;
   width: 100%;
 }
@@ -173,8 +171,8 @@ div.dashboard_container .custom-tooltip {
   display: flex;
   flex-direction: column;
   gap: 40px;
-  width: 64px;
-  padding-top: 16px;
+  width: 80px;
+  padding-top: 10px;
 }
 
 #page-container div[hidden] {
